# Study

./: .gitignore  README.md
OS-CS/: ADC (Analog-to-Digital Converter).md  Bus.md  C++의 이동, 복사, zero-copy.md  C, C++의 발전 과정.md  CPU 스케줄링과 동기화.md  CPU.md  CPU의 명령어 집합 구조(ISA)와 마이크로아키텍처 심화.md  DMA (Direct Memory Access).md  ECS의 구조와 설계 원칙.md  ECS의 중앙 제어 시스템 - 레지스트리 (Registry)의 역할.md  ECS의 탄생 배경과 하드웨어적 진실.md  Flatbuffers.md  GPIO (General Purpose Input Output) 제어.md  M4 코어 특성.md  OS의 프로세스 스케줄링과 시스템 해킹의 기본, 버퍼 오버플로우 공격 원리.md  PacketReader.md  PacketWriter.md  RTOS(Real-Time Operating System).md  kqueue 커널 수준의 이벤트 큐.md  kqueue의 정교한 이벤트 제어 로직.md  std atomic.md  가상 메모리 관리와 TLB의 세부 동작.md  고급 병렬 동시성 모델 (Async IO & Event Loop).md  고급 파일 IO 및 제어 시스템 콜.md  네트워크 소켓 프로그래밍과 패킷의 여정.md  네트워크의 기본, OSI 7 계층과 TCP.IP 스택의 데이터 캡슐화.md  데이터 매핑과 스파스 셋(Sparse Set).md  데이터베이스 시스템(Database Systems).md  데이터베이스 트랜잭션의 마법 (ACID & MVCC).md  데이터의 계층적 구조의 빠른 검색, 균형.md  데이터의 순서와 우선순위.md  디버깅 Workflow와 하드웨어 인터페이스 이해.md  링커 스크립트 분석과 메모리 매핑.md  머신러닝의 기초, 데이터 분석 및 예측.md  메모리 대역폭 (Bandwidth).md  메모리 안전성(Memory Safety)과 임베디드 C++의 안전 패턴.md  무선 통신의 원리.md  배열의 크기를 확인하는 방법.md  복잡한 관계 분석, 그래프 탐색 알고리즘 (BFS, DFS)과 최단 경로 (Dijkstra, A*)".md  분기예측을 위한 하드웨어 구조체.md  (+32 more)
OS-CS/알고리즘/: 그래프 알고리즘.md  기초 제어 및 정렬 (Basics).md  설계 패러다임.md  알고리즘 평가법.md  한계와 난제 (Limits).md
OS-CS/자료구조/: B+ Tree.md  CIDR Tree (Prefix Tree의 확장).md  Cache-Oblivious Algorithms (캐시 미인식 알고리즘).md  Cuckoo Filter (뻐꾸기 필터).md  Dynamic BVH (동적 경계 볼륨 계층 구조).md  Dynamic Connectivity Data Structures.md  HNSW (Hierarchical Navigable Small World Graph).md  LSH (Locality-Sensitive Hashing, 지역성 민감 해싱).md  LSM-Tree (Log-Structured Merge Tree).md  Packed Memory Array (압축 메모리 배열).md  Patricia Tree (Prefix Tree의 압축).md  QPLEX (Quantum Plex).md  T-Tree (메모리 최적화 트리).md  Wavelet Tree (웨이블릿 트리).md  계산 그래프 (Computational Graph, DAG).md  균형 잡힌 트리 (Balanced Trees).md  그래프 (Graph).md  머클 트리 (Merkle Tree, Hash Tree).md  배열 및 행렬 (Tensor).md  블룸 필터 (Bloom Filter).md  스킵 리스트 (Skip List).md  스택 (Stack).md  연결 리스트 (Linked List).md  이진 탐색 트리 (Binary Search Tree).md  이진 힙 (Binary Heap).md  일관성 해싱 (Consistent Hashing).md  쿼드 트리 (Quadtree).md  큐 (Queue).md  트라이 (Trie, Prefix Tree).md  트리 구조 핵심 용어 정리 (Tree Terminology).md  해시 테이블 (Hash Table).md
OS-CS/트렌드/: NVMe 기반 전용 알고리즘 (Storage-Centric Design).md  Rust의 소유권(Ownership)과 Zero-Cost Abstraction.md  eBPF (extended Berkeley Packet Filter).md
base-code/Algorithm/: AStar.cs  AStarLite.cs  BFS.cs  Backtracking_NQueen.cs  BinarySearch.cs  Bitmasking_Subset.cs  BubbleSort.cs  DFS.cs  DP_LIS.cs  DivideAndConquer_Power.cs  DynamicProgramming_Fibonacci.cs  Greedy_CoinChange.cs  HashSetExample.cs  InsertionSort.cs  KMP_StringMatch.cs  MST_Kruskal.cs  MaxFlow_EdmondsKarp.cs  MergeSort.cs  Parametric_BinarySearch.cs  QuickSort.cs  SegmentTree.cs  SelectionSort.cs  ShortestPath_Dijkstra.cs  SlidingWindow_MaxSum.cs  TopologicalSort.cs  TrieExample.cs  UnionFind.cs
base-code/DesignPattern/: BehaviourTree_Pattern.cs  CommandPattern.cs  ComponentPattern.cs  DecoratorPattern.cs  EventBusPattern.cs  FSM_Pattern.cs  FactoryMethodPattern.cs  ObjectPoolPattern.cs  ObserverPattern.cs  ServiceLocatorPattern.cs  SingletonPattern.cs  StatePattern.cs  StrategyPattern.cs
base-code/Example/: SimpleMonsterAI_BehaviourTree.cs  SimpleMonsterAI_FSM.cs
base-code/study-ui-src/: App.js
macOS/: CMakeLists.txt  CMakePresets.json  dummy_client.cpp  main.cpp
macOS/Protocols/: Protocol.fbs
macOS/Scripts/: gen_packets.py
macOS/src/Core/: AppInstance.cpp  AppInstance.h  CMakeLists.txt  Logger.h
macOS/src/Core/ECS/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  ComponentRules.h  ComponentStorage.cpp  ComponentStorage.h  ComponentTypeManager.h  Entity.cpp  Entity.h  Group.cpp  Group.h  IStorage.h  ISystem.h  Registry.cpp  Registry.h  SystemManager.cpp  SystemManager.h  View.cpp  View.h
macOS/src/Core/Memory/: Allocator.h  ArenaAllocator.cpp  ArenaAllocator.h  CMakeLists.txt  FallbackAllocator.cpp  FallbackAllocator.h  FreeListAllocator.cpp  FreeListAllocator.h  LinearAllocator.cpp  LinearAllocator.h  Memory.h  MemoryHelpers.h  MemoryManager.cpp  MemoryManager.h  MemoryTags.h  PoolAllocator.cpp  PoolAllocator.h  ProxyAllocator.cpp  ProxyAllocator.h  StackAllocator.cpp  StackAllocator.h  ThreadSafeProxy.h
macOS/src/Core/Network/: CMakeLists.txt  MPMCQueue.h  NetworkManager.cpp  NetworkManager.h  PacketDispatcher.cpp  PacketDispatcher.h  PacketHandlers.cpp  PacketHandlers.h  PacketHeader.h  PacketList.h  RecvMirrorRingBuffer.h  SendMirrorRingBuffer.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
macOS/src/Core/Threading/: CMakeLists.txt  Common.h  LinearArena.cpp  LinearArena.h  LocalArena.cpp  LocalArena.h  RemoteFreeQueue.h  SpinLock.h  ThreadManager.cpp  ThreadManager.h  ThreadPool.cpp  ThreadPool.h  WorkerContext.h
macOS/src/Core/Utils/: CMakeLists.txt  MemoryUtils.cpp  MemoryUtils.h
macOS/src/GameLogic/Components/: TestComponent.h  TransformComponent.h
macOS/src/Tests/: CMakeLists.txt  FallbackAllocatorTests.cpp  FreeListAllocatorTests.cpp  LinearAllocatorTests.cpp  LocalArenaTests.cpp  MemoryManagerTests.cpp  MemoryStressTests.cpp  PoolAllocatorTests.cpp  ProxyAllocatorTests.cpp  StackAllocatorTests.cpp  ThreadSafetyTests.cpp
oy-link-lib/: main.dart
oy-link-lib/core/: ai_assistant.dart  database_helper.dart  ingredient_checker.dart
oy-link-lib/models/: ai_recommendation.dart  compatibility_result.dart  map_object_model.dart  product_model.dart  recommended_product_model.dart  shelf_model.dart
oy-link-lib/providers/: map_provider.dart  product_provider.dart  shelf_provider.dart
oy-link-lib/screens/: barcode_scanner_screen.dart  home_screen.dart
oy-link-lib/widgets/: menu_card.dart
quiz-src/: App.css  App.jsx  StatisticsDashboard.css  StatisticsDashboard.jsx  index.css
server/Launcher/: AuthManager.cs  GameLauncher.cs  Launcher.csproj  Launcher.sln  MainWindow.xaml  MainWindow.xaml.cs  NicknameDialog.xaml  NicknameDialog.xaml.cs  Page1.xaml  Page1.xaml.cs  SecurityManager.cs
sort-cpp/: main.cpp
todo-list-lib/: main.dart
(+1021 files in other folders)
